--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "core-js": "^3.6.4",
     "vue": "^2.6.12",
     "vue-router": "^3.4.5",
-    "vuetify": "^2.3.12",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
@@ -29,8 +28,6 @@
     "node-sass": "^4.14.1",
     "sass": "^1.26.11",
     "sass-loader": "^8.0.2",
-    "vue-cli-plugin-vuetify": "^2.0.7",
-    "vue-template-compiler": "^2.6.12",
-    "vuetify-loader": "^1.6.0"
+    "vue-template-compiler": "^2.6.12"
   }
 }
