--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/vue-fontawesome": "^3.0.2",
+    "@vueuse/motion": "^3.0.3",
     "vue": "^3.2.41",
     "vue-router": "^4.1.6"
   },
@@ -26,9 +27,11 @@
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/tsconfig": "^0.1.3",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.5.6",
     "prettier": "^2.7.1",
     "sass": "^1.56.1",
     "typescript": "~4.7.4",
