--- a/deploy/Pulumi.prod.yaml
+++ b/deploy/Pulumi.prod.yaml
@@ -1,3 +1,4 @@
+encryptionsalt: v1:80/2aw7nMvM=:v1:WKzL3HkzSPDHzgn8:SJHnKkaINlBKjcf9lftIG8OsaSe9Tw==
 config:
   gcp:project: noted-falcon-394809
   gcp:region: europe-west2
