try change github workflow

--- a/deploy/Pulumi.yaml
+++ b/deploy/Pulumi.yaml
@@ -1,3 +1,6 @@
-name: portfolio
-runtime: nodejs
+name: felicia-portfolio
 description: Deploy wallin.design
+runtime:
+  name: nodejs
+  options:
+    packagemanager: npm
